# tasky

GUI/: CMakeLists.txt  TaskOperations.cpp  TaskOperations.h  TaskyConfig.h  TaskyMainWindow.cpp  TaskyMainWindow.h  main.cpp  main_gui.cpp
